Bug 324857 - SMS message notification does not show any text
Summary: SMS message notification does not show any text
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: plasmoid (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-12 21:43 UTC by Simon Cadman
Modified: 2013-09-14 15:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch for the issue - rename content QString in SMS notification code. (759 bytes, patch)
2013-09-12 21:45 UTC, Simon Cadman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Cadman 2013-09-12 21:43:55 UTC
When my Android device receives an SMS message I receive a systray notification ( KNotification ) , which shows the notification type with the correct icon etc, but the contents of the notification is empty ( missing who the SMS is from and contents of the SMS )

Reproducible: Always

Steps to Reproduce:
1. Ensure kdeconnect is setup and running on both Android device and computer running kdeconnect
2. Receive an SMS
Actual Results:  
KDE notification text is absent

Expected Results:  
Name of person who sent message and text of message is displayed

Patch attached - looks like a scoping issue around reuse of content QString, renaming this to something else fixes it.
Comment 1 Simon Cadman 2013-09-12 21:45:13 UTC
Created attachment 82302 [details]
Patch for the issue - rename content QString in SMS notification code.
Comment 2 Albert Vaca Cintora 2013-09-13 17:22:47 UTC
Git commit 028fc3047065e44d88c2d5550e92b6cf2dcfb3f8 by Albert Vaca, on behalf of Simon Cadman.
Committed on 13/09/2013 at 17:20.
Pushed by albertvaka into branch 'master'.

SMS message notification didn't show any text

QString content was shadowing a previously declared variable

M  +2    -2    kded/plugins/telephony/telephonyplugin.cpp

http://commits.kde.org/kdeconnect-kde/028fc3047065e44d88c2d5550e92b6cf2dcfb3f8
Comment 3 Albert Vaca Cintora 2013-09-13 17:32:48 UTC
Thanks for the report and the patch!
Comment 4 Albert Vaca Cintora 2013-09-14 15:32:14 UTC
Git commit 72db75e11b116190320b790b9b1c74e01ea3bee5 by Albert Vaca, on behalf of Simon Cadman.
Committed on 13/09/2013 at 17:20.
Pushed by albertvaka into branch 'filetransfer'.

SMS message notification didn't show any text

QString content was shadowing a previously declared variable

M  +2    -2    kded/plugins/telephony/telephonyplugin.cpp

http://commits.kde.org/kdeconnect-kde/72db75e11b116190320b790b9b1c74e01ea3bee5