SMS message notification didn't show any text

QString content was shadowing a previously declared variable

BUG: 324857